Added enum values for all projectiles Removed GRAVITY macro and adjusted component size Moved the gravity and added the entityP macro for projectiles Reworked how entity presets work Removed menus and adjusted how levels are loaded Reorganised Shoot function, not technical change handleAI uses Shoot function properly

--- a/MonkeyGame/makefile
+++ b/MonkeyGame/makefile
@@ -35,5 +35,9 @@ clean:
 
 %_:
 	zig cc -o $@ main.c $(ARGS) $(LDFLAGS)
-	./$@$(EXTENSION)
+# 	./$@$(EXTENSION)
+
+# %_:
+# 	gcc cc -o $@ main.c $(ARGS) $(LDFLAGS)
+# 	./$@$(EXTENSION)
 #	$(KILL) $@$(EXTENSION)
